# vector-store-blueprint

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
contracts/: foundry.toml  remappings.txt
contracts/src/: VectorStoreBSM.sol
contracts/test/: VectorStoreBSM.t.sol
operator/: Cargo.toml
operator/src/: config.rs  lib.rs  main.rs  server.rs  store.rs
