[package]
name = "vector-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vector_store"
path = "src/lib.rs"

[[bin]]
name = "vector-store-operator"
path = "src/main.rs"

[dependencies]
blueprint-sdk = { workspace = true, features = ["tee"] }
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
prometheus = { workspace = true }

tangle-inference-core = { git = "https://github.com/tangle-network/tangle-inference-core", branch = "master" }

axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "timeout"] }
config = "0.14"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
async-trait = "0.1"
